Mise à jour : version 1.1.0

--- a/src/aides/aidePriseEnMain.hbs
+++ b/src/aides/aidePriseEnMain.hbs
@@ -19,7 +19,7 @@
 	<tr>
     <td><span class="analogue w3-padding">
     <i class="icon-menu"></i></span></td>
-    <td>Menu donnant accès aux listes : exercices...</td>
+    <td>Menu donnant accès aux listes : types d'exercice...</td>
     </tr>
     <tr>
     <td><span class="analogue w3-padding">
@@ -28,4 +28,15 @@
     </td>
     </tr>
 </table>
+
+<h3>Principe</h3>
+	<ol><li>Sélectionnez, puis copiez le code au format <em>JSON</em> obtenu grâce au générateur dans le presse-papier : <em>édition / copier</em>.</li>
+	<li>Ouvrez un fichier vierge dans un éditeur de texte : Bloc-Notes, TextEdit, etc.</li>
+	<li>Collez le contenu du presse-papier dans ce fichier : <em>édition / coller</em>.</li>
+	<li>Enregistrez ce fichier sous le nom : <em>exercicexx.json</em> où <em>xx</em> désigne le numéro choisi.</li>
+	<li>Copiez ce fichier dans le dossier <code>static/data</code> de l'application concernée : <em>ejMemor, ejDicto</em>&hellip;</li>
+    <li>Ajoutez l'entrée requise pour cet exercice dans le fichier <code>static/config/liste_exercices.json</code> de cette application.</li>
+	<li>Publiez une mise à jour de l'exerciseur <em>ejMemor, ejDicto</em>&hellip;</li>
+    </ol>
+    
 </div>
