--- a/src/menus/menuListeTemplate.hbs
+++ b/src/menus/menuListeTemplate.hbs
@@ -32,8 +32,7 @@
 
 <!-- Titre du contexte -->
   <div class="w3-container">
-    <h1>{{capitalisePremiereLettre ../exercice}}s 
-    </h1>
+    <h1>Types d'exercice</h1>
   </div>
 </div>
 {{/with}}
