--- a/src/pages/accueilExerciceTemplate.hbs
+++ b/src/pages/accueilExerciceTemplate.hbs
@@ -10,7 +10,7 @@
 
 <div class="w3-container">
 <header class="w3-container">
-<h3 class="w3-round w3-padding analogue">Consigne</h3>
+<h3 class="w3-round w3-padding analogue">Information</h3>
 <p class="texte-lien w3-hide-large w3-hide-medium">Utilisez le bouton <i class="icon-actions"></i>pour afficher les actions.</p>
 </header>
 <div class="w3-container">
