--- a/src/pages/consigneExerciceTemplate.hbs
+++ b/src/pages/consigneExerciceTemplate.hbs
@@ -13,7 +13,7 @@
 
   <div class="w3-card-4">
     <div class="w3-container w3-padding analogue">
-      <h3>Consigne</h3>
+      <h3>Information</h3>
     </div>
   </div>
 
