--- a/src/pages/exerciceTemplate.hbs
+++ b/src/pages/exerciceTemplate.hbs
@@ -13,10 +13,19 @@
 
   <div class="w3-card-4">
     <div class="w3-container w3-padding analogue">
-      <h3>{{titre}}</h3>
+      <h3>{{titre}} d'exercice pour {{app_name}}</h3>
     </div>
   </div>
 
-<p>Ici, votre exercice à déployer...</p>
+<p>Ici, les champs du formulaire...</p>
+<ul>
+  {{#each champs}}
+  <li>{{this.description}} : 
+    {{#if (typeFormulaireTexte this.type)}}
+    <input name="{{this.name}}" type="{{this.type}}" />
+    {{/if}}
+  </li>
+  {{/each}}
+</ul>
 
 </div>
