--- a/src/pages/listeTemplate.hbs
+++ b/src/pages/listeTemplate.hbs
@@ -6,7 +6,7 @@
  * VOIR la licence complète à la racine *
  * ==================================== -->
 
-<!-- Liste filtrée des exercices
+<!-- Liste filtrée des types d'exercice
   listeTemplate.hbs
   -->
 
@@ -15,7 +15,7 @@
 
 <div class="w3-card-4 w3-light-gray" id="panneau_recherche" style="display: none">
 	<div class="w3-container analogue">
-		  <h3>Chercher un {{exercice}}</h3>
+		  <h3>Chercher un type d'exercice</h3>
 	</div>
 	<div class="w3-container w3-padding-16">
 	<form>
@@ -34,11 +34,9 @@
     <ul id="liste" class="w3-bar-block w3-border w3-light-gray" 
     style="list-style-type: none; margin: 0; padding: 0">
 	    {{#each info}}
-	    {{#if (estDuNiveauRequis this.niveau)}}
 		<li><a href="#!choix/{{../cible}}/{{this.id}}" class="w3-bar-item w3-button">
 			    {{this.id}} : {{this.titre}} </a>
 		</li>
-	    {{/if}}
 	    {{/each}}
     </ul>
 </div>
